fix spacing

--- a/recipe.css
+++ b/recipe.css
@@ -11,16 +11,11 @@
     width: 100vw;
     height: 100vh;
     align-items: center;
-    padding-top: 80px;
+    padding-top: 125px;
 }
 
 
 :root {
-    /* --p-color: #ff3399;
-    --s-color: #ff6600; */
-
-    /* --p-color: #0070f3;
-    --s-color: #00ff00; */
 
     --p-color: #FF4500;
     --s-color: #FFD700;
